feat: Add Proxy Rule list screen
- Add a button to see applied proxy rules in NetworkEntryDetailsActivity
- Create a new screen ProxyListRulesActivity to show a list of proxy rules.
- Extract adapter and dialog files into a new `dialog` package.
- Fix ProxyActionItemDecorator drawing issue when there's only one item.
- Improve ProxyCreateRuleActivity and ProxyListRulesFragment viewmodel separation.
- Rename ProxyViewModel to ProxyCreateRuleViewModel and ProxyActivity to ProxyCreateRuleActivity.
- Rename ProxyFragment to ProxyListRulesFragment and update _utils.kt.
- Add getRules and getRuleById methods to ProxyDao.
- Rename deleteRule, deleteAction, and deleteActions to deleteRuleById, deleteActionById, and deleteActionsByRuleId respectively.
- Update updateEnabled to updateEnabledById in ProxyDao.
- Add portuguese strings for proxy rules applied and see rules button.
- Add androidx fragment ktx dependency.

--- a/content/proxy/build.gradle
+++ b/content/proxy/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(":content:common")
 
     implementation libs.androidx.activity
+    implementation libs.androidx.fragment
 
     compileOnly libs.squareup.okhttp3
 }
