Test new publish 1

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -28,10 +28,9 @@ jobs:
       with:
         arguments: |
           assemble
-          publish
+          uploadToSonatype
           -Psigning.keyId=${{ secrets.KEY_ID }}
           -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
           -Psigning.secretKeyRingFile=/home/runner/work/big-brother/big-brother/sandman.gpg
-      env:
-        ossrh_username: ${{ secrets.OSSRH_USERNAME }}
-        ossrh_password: ${{ secrets.OSSRH_PASSWORD }}
+          -PsonatypeUsername=${{ secrets.OSSRH_USERNAME }}
+          -PsonatypePassword=${{ secrets.OSSRH_PASSWORD }}
