--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 
 libVersionCode=10100
-libVersion=1.1.0-SNAPSHOT
+libVersion=1.1.1
