--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     alias libs.plugins.android.library apply false
     alias libs.plugins.android.kotlin apply false
     alias libs.plugins.ksp apply false
-    id("tech.medivh.plugin.publisher") version "1.2.3" apply false
+    alias libs.plugins.medivh apply false
 }
 
 allprojects {
