--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -14,6 +14,7 @@ okhttp3 = "4.10.0"
 timber = "5.0.1"
 compose-compiler = "1.4.2"
 compose-runtime = "1.3.3"
+medivh = "1.2.3"
 # confirm
 kotlin-reflection = "1.7.21"
 kotlin-coroutines = "1.6.1"
@@ -56,3 +57,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 android-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+medivh = { id = "tech.medivh.plugin.publisher", version.ref = "medivh" }
