--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     alias libs.plugins.android.kotlin apply false
     alias libs.plugins.ksp apply false
     alias libs.plugins.medivh apply false
+    alias libs.plugins.serialization apply false
 }
 
 allprojects {
