--- a/content/proxy/build.gradle
+++ b/content/proxy/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias libs.plugins.android.library
     alias libs.plugins.android.kotlin
     id 'kotlin-parcelize'
+    id 'kotlinx-serialization'
 }
 
 apply from: file('../../gradle/publish.gradle')
@@ -13,6 +14,7 @@ dependencies {
 
     implementation libs.androidx.activity
     implementation libs.androidx.fragment
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3"
 
     compileOnly libs.squareup.okhttp3
 }
