--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -14,7 +14,8 @@ okhttp3 = "4.10.0"
 timber = "5.0.1"
 compose-compiler = "1.4.2"
 compose-runtime = "1.3.3"
-medivh = "1.2.3"
+medivh = "1.2.4"
+serialization = "1.8.10"
 # confirm
 kotlin-reflection = "1.7.21"
 kotlin-coroutines = "1.6.1"
@@ -58,3 +59,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 android-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 medivh = { id = "tech.medivh.plugin.publisher", version.ref = "medivh" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "serialization" }
