feat: Improve network details view
This commit enhances the network details view by:

- Adding support for rendering HTML, Multipart, and image responses directly within the view.
- Improving the handling and display of request/response bodies and headers.
- Adding Kotlin serialization for better data handling.
- Implementing `toReadable` and `toHtml` extension functions for Maps.
- Including an "Upload Image" and "XML API" example in the sample app.
- Adding an example image to assets for the upload example.
- Minor UI adjustments and code refactoring in `NetworkEntryDetailsActivity` and related classes.

--- a/content/network/build.gradle
+++ b/content/network/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias libs.plugins.android.library
     alias libs.plugins.android.kotlin
     id 'kotlin-parcelize'
+    id 'kotlinx-serialization'
 }
 
 apply from: file('../../gradle/publish.gradle')
@@ -15,4 +16,5 @@ dependencies {
     compileOnly libs.squareup.okhttp3
 
     implementation libs.androidx.activity
+    implementation libs.kotlin.serialization
 }
