--- a/content/proxy/build.gradle
+++ b/content/proxy/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
     implementation libs.androidx.activity
     implementation libs.androidx.fragment
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3"
+    implementation libs.kotlin.serialization
 
     compileOnly libs.squareup.okhttp3
 }
