--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -16,6 +16,7 @@ compose-compiler = "1.4.2"
 compose-runtime = "1.3.3"
 medivh = "1.2.4"
 serialization = "1.8.10"
+
 # confirm
 kotlin-reflection = "1.7.21"
 kotlin-coroutines = "1.6.1"
@@ -30,11 +31,15 @@ androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-kt
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+
 # Material
 material = { module = "com.google.android.material:material", version.ref = "material" }
+
 # Kotlin
 kotlin-reflection = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin-reflection" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
+kotlin-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.3.3" }
+
 # Squareup
 squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 squareup-retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
