feat: Add deeplink extractor plugin
This commit introduces a new Gradle plugin for extracting deeplinks from the AndroidManifest.xml file.

Key changes:
- Added `content:deeplink` and `content:deeplink:plugin` modules.
- The `ExtractDeeplinkPlugin` parses the merged manifest for each variant and extracts deeplinks based on intent filters with `ACTION_VIEW` and `CATEGORY_BROWSABLE`.
- Extracted deeplinks are saved to a `deeplinks.txt` file in the build assets directory.
- The plugin is applied in the app's `build.gradle` file.
- Updated `.idea` and `build.gradle` files to include the new modules and plugin.
- Added necessary dependencies to `libs.toml`.
- Removed the manual deeplink extraction script from the app's `build.gradle`.

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,5 @@ include ':content:report'
 include ':content:crash'
 include ':content:database'
 include ':content:proxy'
+include ':content:deeplink'
+include ':content:deeplink:plugin'
