Adding module UiAutomator

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation project(":content:proxy")
     implementation project(":content:log")
     implementation project(":content:database")
+    implementation project(":content:ui-automator")
 }
