--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,4 @@ include ':content:report'
 include ':content:crash'
 include ':content:database'
 include ':content:proxy'
+include ':content:ui-automator'
