Refactor: Enhance UI Automator and Core Components
This commit introduces several improvements and new features to the UI Automator and core components:

**UI Automator:**

- **Deep Inspection & Recording Control:**
    - Added ability to toggle deep inspection for more detailed view analysis.
    - Implemented start/stop recording functionality for UI Automator sessions.
- **Enhanced View Identification:**
    - Improved XPath generation for both Android Views and Jetpack Compose elements.
    - Added support for identifying unique test tags in Compose.
- **Improved Tooltip:**
    - The UI Automator tooltip now displays the view's name (XPath or test tag).
    - Added "Perform Long Click" option to the tooltip for views that support it.
    - Tooltip automatically hides/shows based on view selection and recording state.
- **Composable Element Interaction:**
    - Enabled performing long clicks on Composable elements.
    - More accurate identification of click and long-click actions for Composables.
- **Activity Lifecycle Integration:** UI Automator view and tooltip are now managed based on activity lifecycle and recording state.

**Core:**

- **BigBrotherTooltipView:**
    - Introduced `BigBrotherTooltipView` as a generic tooltip component that can be attached to `BigBrotherView`.
    - Allows adding custom actions (buttons with icons) to the tooltip.
    - Tooltip position dynamically adjusts based on `BigBrotherView`'s location.
- **BigBrotherView Enhancements:**
    - Added `onMoveCallback` to `BigBrotherView` to notify when the bubble is moved.
    - Improved bubble animation and positioning logic.
    - Added `animationDuration` to `BigBrotherConfig`.
- **Task Prioritization:** `BigBrotherTask` instances are now sorted by their `priority`.
- **Click Observer:** `BigBrotherClickObserverView` is now public.

**Common:**

- **Drawable Utils:** Added `setColor` extension for `Drawable` to simplify color manipulation.
- **Context Utils:** Added `getDrawableFromAtt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation project(":content:log")
     implementation project(":content:database")
     implementation project(":content:ui-automator")
+
+    // NEVER implement this on your project otherwise puppies will die
+    implementation project(":content:common")
 }
