feat: Implement deeplink management with DAO, ViewModel, and UI components

--- a/content/crash/src/main/AndroidManifest.xml
+++ b/content/crash/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         <activity
             android:name="br.com.mrocigno.bigbrother.crash.CrashActivity"
             android:exported="false"
-            android:theme="@style/Theme.BigBrother">
+            android:theme="@style/BigBrotherTheme">
 
             <intent-filter>
                 <action android:name="${applicationId}.CRASH_ACTIVITY"/>
