--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/bigbrother_ic_round_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BigBrother"
+        android:theme="@style/BigBrotherTheme"
         android:name=".SampleApplication"
         tools:targetApi="31">
 
