Refactor: Adapt interceptors to use common RequestModel/ResponseModel
- Introduces `RequestModel` and `ResponseModel` for consistent handling of request/response data across different HTTP clients (OkHttp, Ktor).
- Updates `BBInterceptor`, `ProxyInterceptor`, and `NetworkEntryInterceptor` to utilize these new models.
- Adds Ktor dependency and initial Ktor interceptor implementation.
- Bumps library version to 1.3.1.

--- a/content/core/build.gradle
+++ b/content/core/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation libs.kotlin.reflection
 
     compileOnly libs.squareup.okhttp3
+    compileOnly libs.ktor.core
 
     constraints {
         api project(":content:log")
