--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -9,7 +9,7 @@ android {
     publishing {
         singleVariant("release") {
             withSourcesJar()
-            withJavadocJar()
+//            withJavadocJar()
         }
     }
 }
