--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,5 @@
 .externalNativeBuild
 .cxx
 local.properties
-/.idea/appInsightsSettings.xml
-/.idea/deploymentTargetSelector.xml
-/.idea/other.xml
+/.idea/*.xml
 /aa.json
