feat: Add Ktor client support and enhance UI
This commit introduces support for the Ktor HTTP client alongside the existing Retrofit/OkHttp implementation and improves the user interface.

- Adds new Ktor dependencies for core, OkHttp engine, content negotiation, Gson serialization, and logging.
- Implements a `GithubRepository` that abstracts network calls, allowing for selection between Retrofit and Ktor clients.
- Introduces a `RadioGroup` in the Network screen to let users switch between OkHttp/Retrofit and Ktor for making requests.
- Creates a `NetworkKtor` object to configure and provide a singleton `HttpClient` instance, which includes the BigBrother interceptor.
- Bumps the library version from 1.3.1 to 1.4.0.
- Applies `fitsSystemWindows="true"` or `Modifier.statusBarsPadding()` to various activity layouts and composables to prevent UI overlap with the status bar.
- Renames `NetworkConfig` to `NetworkRetrofit` for better clarity.
- Re-enables the `publisher` and `withJavadocJar` in the `publish.gradle` script.

--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
-//apply plugin: 'tech.medivh.plugin.publisher'
+apply plugin: 'tech.medivh.plugin.publisher'
 
 def libGroup = "io.github.mrocigno"
 def libVersion = project.findProperty("libVersion")
@@ -9,7 +9,7 @@ android {
     publishing {
         singleVariant("release") {
             withSourcesJar()
-//            withJavadocJar()
+            withJavadocJar()
         }
     }
 }
