--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -50,6 +50,10 @@ squareup-okhttp3-logging = { module = "com.squareup.okhttp3:logging-interceptor"
 
 # Ktor
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-gson = { module = "io.ktor:ktor-serialization-gson", version.ref = "ktor" }
+ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 
 # Compose
 compose-material3 = { module = "androidx.compose.material:material", version = "1.3.1" }
