--- a/gradle/libs.toml
+++ b/gradle/libs.toml
@@ -16,6 +16,7 @@ compose-compiler = "1.4.2"
 compose-runtime = "1.3.3"
 medivh = "1.2.4"
 serialization = "1.8.10"
+ktor = "2.3.13"
 big-brother="1.3.0"
 
 # confirm
@@ -46,6 +47,13 @@ squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = 
 squareup-retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 squareup-okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
 squareup-okhttp3-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3" }
+
+# Ktor
+ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-gson = { module = "io.ktor:ktor-serialization-gson", version.ref = "ktor" }
+ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 
 # Compose
 compose-material3 = { module = "androidx.compose.material:material", version = "1.3.1" }
