feat: enhance UI Automator with back press support and dialog detection
- Bumps `libVersionCode` to 10500 and `libVersion` to 1.5.0.
- Adds `BACK_PRESSED` to `RecordedAction` and implements its execution logic in `UiAutomatorRecordModel`.
- Introduces `checkForDialogs` in `UiAutomatorTask` to detect and attach `UiAutomatorView` to window manager views (e.g., dialogs).
- Adds support for recording and executing back press actions via `UiAutomatorHolder` and `BigBrotherTooltipView`.
- Updates `UiAutomatorView` to dynamically track its `rootView` when attached to a window and trigger dialog checks on focus loss.
- Enhances `UiAutomatorTask` to support recording within Fragments.
- Refactors `UiAutomatorTooltipView` to use a themed context.
- Disables Javadoc generation in `publish.gradle`.
- Includes `content:ui-automator` as an API dependency in `content:core`.

--- a/content/core/build.gradle
+++ b/content/core/build.gradle
@@ -21,5 +21,6 @@ dependencies {
         api project(":content:crash")
         api project(":content:database")
         api project(":content:proxy")
+        api project(":content:ui-automator")
     }
 }
